updates xib files

--- a/KanCentralizedViewsPlugin/KanCastDialogViews/ChromecastDeviceDisconnectView.xib
+++ b/KanCentralizedViewsPlugin/KanCastDialogViews/ChromecastDeviceDisconnectView.xib
@@ -25,9 +25,8 @@
                                 <attributedString key="attributedTitle">
                                     <fragment content="Disconnect">
                                         <attributes>
-                                            <color key="NSColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="NSColor" red="1" green="0.57647058823529407" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" size="15" name="ArialMT"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="charWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
@@ -41,7 +40,7 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
-                                <action selector="disconnectChromecast:" destination="iN0-l3-epB" eventType="touchUpInside" id="BG1-CW-IMh"/>
+                                <action selector="disconnectChromecast:" destination="iN0-l3-epB" eventType="touchUpInside" id="9HT-SE-J4I"/>
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="משדר ל- SalonCast" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vez-Ug-Sb2">
