--- a/KanCentralizedViewsPlugin/KanDialogView/KanDialogView.xib
+++ b/KanCentralizedViewsPlugin/KanDialogView/KanDialogView.xib
@@ -17,7 +17,7 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bqO-N5-MSX" userLabel="TouchEvent View">
                     <rect key="frame" x="0.0" y="0.0" width="441" height="701"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.20392156862745098" green="0.20392156862745098" blue="0.20392156862745098" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IpD-Ea-DTb">
                     <rect key="frame" x="0.0" y="479" width="441" height="222"/>
